BigFloat constants passing some tests.